--- a/css/index.css
+++ b/css/index.css
@@ -62,19 +62,19 @@ a {
 
 .top-nav li a {
     display: block;
-    color: white;
+    color: rgba(255, 255, 255, 0.9);
     text-align: center;
     padding: 14px 16px;
-    font-weight: bolder;
+    font-weight: 100;
     text-decoration: none;
     position: relative; /* 设置相对定位 */
-    transition: color 0.3s;
+    transition: 0.3s;
 }
 
 .top-nav li a::after {
     content: '';
     position: absolute;
-    bottom: 0px;
+    bottom: 3px;
     left: 50%; /* 初始位置在中间 */
     width: 0; /* 初始宽度为0 */
     height: 2px; /* 初始高度为2px */
@@ -86,6 +86,12 @@ a {
 
 .top-nav li a:hover::after {
     width: 100%; /* 鼠标悬停时宽度扩展到100% */
+}
+
+.top-nav li a:hover {
+    scale: 1.2;
+    color: #Ffffff;
+    font-weight: 999;
 }
 
 /* 当滚动到对应 section 时，增加高度 */
@@ -110,7 +116,7 @@ a {
 
 .top-nav li input:hover {
     background-color: #00000050;
-    border: #00000040 5px solid;
+    border: #ffffff10 3px solid;
     color: rgb(255, 255, 255);
 }
 
