--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,10 @@ html {
     cursor: url('/assets/basic/cursor.png'),auto;
 }
 
+* {
+    scrollbar-width: none;
+}
+
 a {
     text-decoration: none;
     cursor: url('/assets/basic/cursor.png'),auto;
