--- a/css/index.css
+++ b/css/index.css
@@ -222,11 +222,20 @@ a {
     padding: 12px;
     display: flex;
     align-items: center;
-    transition: transform 0.3s;
+    box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.3);
+    transition: 0.3s;
 }
 
 .link:hover {
-    transform: scale(1.05);
+    scale: 1.05;
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.3);
+    background-color: #00000040;
+}
+
+.link:active {
+    scale: 0.9;
+    box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.3);
+    background-color: #00000050;
 }
 
 .link img {
@@ -262,6 +271,9 @@ footer {
 
 .footer-links {
     margin-bottom: 16px;
+    display: flex;
+    justify-self: center;
+    gap: 8px;
 }
 
 footer p {
