✨ 添加原神相关链接，增加警告提示样式

--- a/css/index.css
+++ b/css/index.css
@@ -27,6 +27,10 @@ i {
     transition: 0.3s;
 }
 
+#warning {
+    color: #FFBA4A;
+}
+
 a {
     text-decoration: none;
     cursor: url('/assets/basic/cursor.png'),auto;
